# Triage_urgence_bis

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  demo_rag.py  init_rag_db.py  pyproject.toml  requirements.txt  test.py  test_embeddings.py  test_rag_complete.py  test_vector_store.py
Tests/: test_embeddings.py
app/: Home.py  __init__.py  main.py
app/components/: __init__.py  chat_interface.py  dashboard.py  patient_card.py
app/pages/: 01_simulation.py  02_interactive.py  Chat_interactif.py  Generation.py  Monitoring.py  chat_interactive.py
config/: __init__.py  prompts.py  settings.py
data/demo_rag_db/: chroma.sqlite3
data/medical_knowledge/: .gitkeep
data/models/: triage_dataset_v2.csv
data/rag_document/: arbre_questions.md  cas_exemples.md  criteres_classification.md  protocoles_action.md  signes_alerte.md
data/vector_db/: chroma.sqlite3
notebooks/: 01_exploration_data.ipynb  generate_dataset_v2.ipynb  train_model_v2.ipynb
src/: __init__.py
src/agents/: __init__.py  base_agent.py  conversation_analyzer.py  nurse_agent.py  patient_generator.py  patient_simulator.py  test_simulation_complete.py  triage_agent.py
src/data/: triage_dataset_balanced.pkl  triage_dataset_complete.pkl
src/llm/: __init__.py  base_llm.py  llm_factory.py  mistral_provider.py  openai_provider.py
src/metrics/: __init__.py  carbon_tracker.py  cost_tracker.py  latency_tracker.py  metrics_aggregator.py
src/ml/: __init__.py  add_manual_cases (2).ipynb  add_manual_cases.ipynb  classifier.py  classifier_clinicalbert.py  feature_extraction.ipynb  feature_extractor.py  generate_dataset_FIXED.ipynb  preprocessor.py  test.ipynb  test_clinical_bert.ipynb  train_SIMPLE_model.ipynb  train_model.ipynb
src/models/: __init__.py  conversation.py  patient.py  random_forest_simple.pkl  triage.py
src/monitoring/: __init__.py  cost_calculator.py  metrics_tracker.py
src/rag/: __init__.py  (+10 more)
test/: test_vector_store
tests/: test_agents.py  test_classifier.py  test_models.py  test_rag.py
(+9 files in other folders)
